# FootballMatch-and-Movement-Analysis

./: README.md
Sports2D-main/: .gitignore  README.md  README_CPU.md  pyproject.toml  requirements.txt  setup_venv.ps1
Sports2D-main/Sports2D/: Sports2D.py  __init__.py  gui_app.py  process.py
output/: logs.txt
output/Single_Hop4 Exam_2026-03-06_123833_tvc2_Sports2D/: Single_Hop4 Exam_2026-03-06_123833_tvc2_Sports2D_angles_person00.mot  Single_Hop4 Exam_2026-03-06_123833_tvc2_Sports2D_calib.toml  Single_Hop4 Exam_2026-03-06_123833_tvc2_Sports2D_m_person00.c3d  Single_Hop4 Exam_2026-03-06_123833_tvc2_Sports2D_m_person00.trc  Single_Hop4 Exam_2026-03-06_123833_tvc2_Sports2D_px_person00.trc
output/test Exam_2026-03-06_135002_tvc2_Sports2D/: test Exam_2026-03-06_135002_tvc2_Sports2D_angles_person00.mot  test Exam_2026-03-06_135002_tvc2_Sports2D_calib.toml  test Exam_2026-03-06_135002_tvc2_Sports2D_m_person00.c3d  test Exam_2026-03-06_135002_tvc2_Sports2D_m_person00.trc  test Exam_2026-03-06_135002_tvc2_Sports2D_px_person00.trc
output/test4 Exam_2026-03-06_143128_tvc1_Sports2D/: test4 Exam_2026-03-06_143128_tvc1_Sports2D_angles_person00.mot  test4 Exam_2026-03-06_143128_tvc1_Sports2D_calib.toml  test4 Exam_2026-03-06_143128_tvc1_Sports2D_m_person00.c3d  test4 Exam_2026-03-06_143128_tvc1_Sports2D_m_person00.trc  test4 Exam_2026-03-06_143128_tvc1_Sports2D_px_person00.trc
output/test4 Exam_2026-03-06_143128_tvc2_Sports2D/: test4 Exam_2026-03-06_143128_tvc2_Sports2D_angles_person00.mot  test4 Exam_2026-03-06_143128_tvc2_Sports2D_calib.toml  (+3 more)
(+5 files in other folders)
